tdf#119364: fix by reverting some previous commits about notebookbar

Revert:
- dcbb65f2a4a3ee70ccd4896d7a5e975dbd9e6509
which was to avoid Avoid com.sun.star.container.NoSuchElementException "Active"
when opening embedded form

- 6c89f41b02fcd8918e535460994daac4ecd5d37e
which was to fix previous commit and fix tdf#119330

Just fix Avoid com.sun.star.container.NoSuchElementException "Active"
by testing if OUString returned by lcl_getAppName is empty or not.
If empty, just return false

Change-Id: I51ec7cba457bafdd161e02f16e3e09fddcd04408